iptables
# Generated by iptables-save v1.4.7 on Mon Apr 21 16:35:21 2014
*mangle
:PREROUTING ACCEPT [15226430:3324222456]
:INPUT ACCEPT [13978281:2675656469]
:FORWARD ACCEPT [709431:626765112]
:OUTPUT ACCEPT [7897570:64770154783]
:POSTROUTING ACCEPT [8607001:65396919895]
#-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
#-A POSTROUTING -o virbr1 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
#-A POSTROUTING -o virbr2 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
#-A POSTROUTING -o virbr3 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A POSTROUTING -o virbr4 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Apr 21 16:35:21 2014
# Generated by iptables-save v1.4.7 on Mon Apr 21 16:35:21 2014
*filter
:INPUT ACCEPT [13978281:2675656469]
:FORWARD ACCEPT [709431:626765112]
:OUTPUT ACCEPT [7897570:64770154783]
#-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
#-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
#-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
#-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
#-A FORWARD -d 192.168.122.0/24 -o virbr0 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
#-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
#-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
#-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable

#-A INPUT -i virbr1 -p udp -m udp --dport 53 -j ACCEPT
#-A INPUT -i virbr1 -p tcp -m tcp --dport 53 -j ACCEPT
#-A INPUT -i virbr1 -p udp -m udp --dport 67 -j ACCEPT
#-A INPUT -i virbr1 -p tcp -m tcp --dport 67 -j ACCEPT
#-A FORWARD -d 192.168.123.0/24 -o virbr1 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -s 192.168.123.0/24 -i virbr1 -j ACCEPT
#-A FORWARD -i virbr1 -o virbr1 -j ACCEPT
#-A FORWARD -o virbr1 -j REJECT --reject-with icmp-port-unreachable
#-A FORWARD -i virbr1 -j REJECT --reject-with icmp-port-unreachable

#-A INPUT -i virbr2 -p udp -m udp --dport 53 -j ACCEPT
#-A INPUT -i virbr2 -p tcp -m tcp --dport 53 -j ACCEPT
#-A INPUT -i virbr2 -p udp -m udp --dport 67 -j ACCEPT
#-A INPUT -i virbr2 -p tcp -m tcp --dport 67 -j ACCEPT
#-A FORWARD -d 192.168.124.0/24 -o virbr2 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -s 192.168.124.0/24 -i virbr2 -j ACCEPT
#-A FORWARD -i virbr2 -o virbr2 -j ACCEPT
#-A FORWARD -o virbr2 -j REJECT --reject-with icmp-port-unreachable
#-A FORWARD -i virbr2 -j REJECT --reject-with icmp-port-unreachable

#-A INPUT -i virbr3 -p udp -m udp --dport 53 -j ACCEPT
#-A INPUT -i virbr3 -p tcp -m tcp --dport 53 -j ACCEPT
#-A INPUT -i virbr3 -p udp -m udp --dport 67 -j ACCEPT
#-A INPUT -i virbr3 -p tcp -m tcp --dport 67 -j ACCEPT
#-A FORWARD -d 192.168.125.0/24 -o virbr3 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -s 192.168.125.0/24 -i virbr3 -j ACCEPT
#-A FORWARD -i virbr3 -o virbr3 -j ACCEPT
#-A FORWARD -o virbr3 -j REJECT --reject-with icmp-port-unreachable
#-A FORWARD -i virbr3 -j REJECT --reject-with icmp-port-unreachable

-A INPUT -i virbr4 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr4 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr4 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr4 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.126.0/24 -o virbr4 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.126.0/24 -i virbr4 -j ACCEPT
-A FORWARD -i virbr4 -o virbr4 -j ACCEPT
-A FORWARD -o virbr4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr4 -j REJECT --reject-with icmp-port-unreachable

COMMIT
# Completed on Mon Apr 21 16:35:21 2014
# Generated by iptables-save v1.4.7 on Mon Apr 21 16:35:21 2014
*nat
:PREROUTING ACCEPT [658286:31061240]
:POSTROUTING ACCEPT [25880:1637257]
:OUTPUT ACCEPT [25880:1637257]
#-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
#-A POSTROUTING -s 192.168.122.0/24 -o virbr0 -j SNAT --to-source 10.239.82.116

#-A POSTROUTING -s 192.168.123.0/24 ! -d 192.168.123.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.123.0/24 ! -d 192.168.123.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.123.0/24 ! -d 192.168.123.0/24 -j MASQUERADE
#-A POSTROUTING -s 192.168.123.0/24 -o virbr1 -j SNAT --to-source 10.239.82.116
#
#-A POSTROUTING -s 192.168.124.0/24 ! -d 192.168.124.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.124.0/24 ! -d 192.168.124.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.124.0/24 ! -d 192.168.124.0/24 -j MASQUERADE
#-A POSTROUTING -s 192.168.124.0/24 -o virbr2 -j SNAT --to-source 10.239.82.116
#
#-A POSTROUTING -s 192.168.125.0/24 ! -d 192.168.125.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.125.0/24 ! -d 192.168.125.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
#-A POSTROUTING -s 192.168.125.0/24 ! -d 192.168.125.0/24 -j MASQUERADE
#-A POSTROUTING -s 192.168.125.0/24 -o virbr3 -j SNAT --to-source 10.239.82.116

-A POSTROUTING -s 192.168.126.0/24 ! -d 192.168.126.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.126.0/24 ! -d 192.168.126.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.126.0/24 ! -d 192.168.126.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.126.0/24 -o virbr4 -j SNAT --to-source 10.239.82.116

COMMIT
# Completed on Mon Apr 21 16:35:21 2014
